force-app/main/default/objects/Early_Adopter_Program__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expression of Interest</fullName>
            </value>
            <value>
                <fullName>Internal Approval</fullName>
            </value>
            <value>
                <fullName>Implementing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>