force-app/main/default/objects/Early_Adopter_Program__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blackberry 10 Time Entry App</fullName>
            </value>
            <value>
                <fullName>Windows Phone 8 Time Entry App</fullName>
            </value>
            <value>
                <fullName>iOS Capture App</fullName>
            </value>
            <value>
                <fullName>Android Capture App</fullName>
            </value>
            <value>
                <fullName>Intapp Time Mobile Re-design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>